# mobile-wallet

./: .flowconfig  .gitignore  .gitmodules  App.js  CMakeLists.txt  README.md  Router.js  app.json  index.js  main.css  old.objc  package-lock.json  package.json  testSigningTx.js
__tests__/: App.js  basic.e2e.js  index.android.js  package.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: BUCK  build.gradle
android/app/release/: output.json
android/gradle/wrapper/: gradle-wrapper.properties
e2e/: firstTest.spec.js
grpc_js_messages/: addressamount.js  addresslist.js  addressstate.js  block.js  blockdatapoint.js  blockheader.js  blockheaderextended.js  blockheightdata.js  blockmetadata.js  blockmetadatalist.js  blocknumbermapping.js  collectephemeralmessagereq.js  collectephemeralmessageresp.js  empty.js  encryptedephemeralmessage.js  ephemeralchannelpayload.js  ephemeralmessagepayload.js  ephemeralmetadata.js  genesisbalance.js  getaddressstatereq.js  getaddressstateresp.js  getblockreq.js  getblockresp.js  getknownpeersreq.js  getknownpeersresp.js  getlatestdatareq.js  getlatestdataresp.js  getlocaladdressesreq.js  getlocaladdressesresp.js  getnodestatereq.js  getnodestateresp.js  getobjectreq.js  getobjectresp.js  getstatsreq.js  getstatsresp.js  getwalletreq.js  getwalletresp.js  latticepk.js  latticepublickeys.js  latticepublickeytxnreq.js  (+27 more)
ios/: CreateWallet.h  CreateWallet.mm  DilithiumIos.h  DilithiumIos.mm  Kyber.h  Kyber.mm  KyberIos.h  KyberIos.mm  Podfile  WalletHelperFunctions.h  WalletHelperFunctions.mm  old.qrl.proto  qrl.proto  refreshWallet.h  refreshWallet.mm  testingEphemeral.h  testingEphemeral.mm  theQRL.podspec  transferCoins.h  transferCoins.mm
ios/theQRL/: AppDelegate.m  AppDelegate.mm  Info.plist  main.jsbundle  main.m
ios/theQRL.xcodeproj/: project.pbxproj
ios/theQRL.xcworkspace/: contents.xcworkspacedata
ios/theQRLTests/: theQRLTests.m
screens/: BackupWallet.js  CompleteSetup.js  ConfirmTxModal.js  CreateAdvancedWallet.js  CreateNewWallet.js  CreateWallet.js  CreateWalletHashFunction.js  CreateWalletTreeHeight.js  DeleteWalletModal.js  Explorer.js  OpenExistingWallet.js  OpenExistingWalletModal.js  OpenExistingWalletOptions.js  OpenExistingWalletWithHexseed.js  OpenExistingWalletWithMnemonic.js  ProvideWalletPin.js  Scan.js  ScanQrModal.js  SendReceive.js  Settings.js  ShowQrCodeModal.js  SignIn.js  TransactionsHistory.js  TxDetailsView.js  UnlockAppModal.js  ValidatePinForBackup.js  Wallet.js  Wallets.js  styles.js
(+25 files in other folders)
